--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.11.150'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
