--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.11.150'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+  compile group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.11.150'
+
+  testCompile group: 'junit', name: 'junit', version: '4.12'
+  testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
