--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,21 @@
 group 'sqs-copier'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+task fatJar(type: Jar) {
+  manifest {
+    attributes 'Implementation-Title': 'Amazon SQS Copier',
+        'Implementation-Version': version,
+        'Main-Class': 'org.aws.sqs.copier.SQSCopier'
+  }
+  baseName = 'SQSCopier'
+  from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+  with jar
+}
 
 repositories {
   mavenCentral()
